tests/variants/nullary/ill-typed/missing_data_for_label.stella
language core;

extend with #variants, #nullary-variant-labels;

fn foo(arg : Bool) -> <| nval : Nat, bval : Bool |> {
	return <| nval |>
}

fn main(test : Bool) -> Nat {
  return 0
}
